fix validation errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               type="text"
               name="user"
               placeholder="Username"
-              class="inputField"
+              class="text textInput"
               required
             />
 
@@ -31,7 +31,7 @@
               name="pass"
               type="password"
               placeholder="Passwort"
-              class="inputField"
+              class="text textInput"
               required
             />
             <button class="button" onsubmit="document.loginForm.reset()">
@@ -54,7 +54,7 @@
               type="text"
               name="user"
               placeholder="Username"
-              class="inputField"
+              class="text textInput"
               required
             />
 
@@ -62,7 +62,7 @@
               name="pass"
               type="password"
               placeholder="Passwort"
-              class="inputField"
+              class="text textInput"
               required
             />
             <button class="button" onsubmit="document.loginForm.reset()">
