--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
       </div>
     </div>
     <script type="module" src="js/tabs.js"></script>
+    <script type="module" src="js/cardClass.js"></script>
   </body>
 </html>
